A version good enough to submit?

--- a/doc/paper/paper.bib
+++ b/doc/paper/paper.bib
@@ -386,3 +386,14 @@
   year={2012},
   publisher={Springer Science \& Business Media}
 }
+@article{DBLP:journals/ai/WangPWK24,
+  author       = {Yuanhong Wang and
+                  Juhua Pu and
+                  Yuyi Wang and
+                  Ondrej Ku\v{z}elka},
+  title        = {Lifted algorithms for symmetric weighted first-order model sampling},
+  journal      = {Artif. Intell.},
+  volume       = {331},
+  pages        = {104114},
+  year         = {2024}
+}
