--- a/doc/paper/plot.tex
+++ b/doc/paper/plot.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.6 on 2024-08-07 14:16:35
+% Created by tikzDevice version 0.12.6 on 2024-08-15 12:12:55
 % !TEX encoding = UTF-8 Unicode
 \documentclass[10pt]{article}
 \usepackage{tikz}
@@ -79,7 +79,15 @@
 	(179.27,198.75);
 \definecolor{drawColor}{RGB}{27,158,119}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 40.10,106.36) --
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 40.10,123.48) --
+	( 45.67,112.22) --
+	( 51.24,112.22) --
+	( 56.80,112.42) --
+	( 62.37,119.02) --
+	( 67.94,162.96);
+\definecolor{drawColor}{RGB}{117,112,179}
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] ( 40.10,106.36) --
 	( 45.67,106.36) --
 	( 51.24,106.36) --
 	( 56.80,106.36) --
@@ -91,76 +99,92 @@
 	( 90.20,107.23) --
 	( 95.77,109.99) --
 	(101.34,117.90);
-\definecolor{drawColor}{RGB}{117,112,179}
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] ( 40.10,123.48) --
-	( 45.67,112.22) --
-	( 51.24,112.22) --
-	( 56.80,112.42) --
-	( 62.37,119.02) --
-	( 67.94,162.96);
-\definecolor{fillColor}{RGB}{27,158,119}
-
-\path[fill=fillColor] ( 40.10,106.36) circle (  1.96);
-
-\path[fill=fillColor] ( 45.67,106.36) circle (  1.96);
-
-\path[fill=fillColor] ( 51.24,106.36) circle (  1.96);
-
-\path[fill=fillColor] ( 56.80,106.36) circle (  1.96);
-
-\path[fill=fillColor] ( 62.37,106.36) circle (  1.96);
-
-\path[fill=fillColor] ( 67.94,106.37) circle (  1.96);
-
-\path[fill=fillColor] ( 73.50,106.38) circle (  1.96);
-
-\path[fill=fillColor] ( 79.07,106.42) circle (  1.96);
-
-\path[fill=fillColor] ( 84.64,106.58) circle (  1.96);
-
-\path[fill=fillColor] ( 90.20,107.23) circle (  1.96);
-
-\path[fill=fillColor] ( 95.77,109.99) circle (  1.96);
-
-\path[fill=fillColor] (101.34,117.90) circle (  1.96);
 \definecolor{fillColor}{RGB}{117,112,179}
 
-\path[fill=fillColor] ( 38.14,121.52) --
-	( 42.06,121.52) --
-	( 42.06,125.44) --
-	( 38.14,125.44) --
+\path[fill=fillColor] ( 38.14,104.40) --
+	( 42.06,104.40) --
+	( 42.06,108.33) --
+	( 38.14,108.33) --
 	cycle;
 
-\path[fill=fillColor] ( 43.71,110.26) --
-	( 47.63,110.26) --
-	( 47.63,114.18) --
-	( 43.71,114.18) --
+\path[fill=fillColor] ( 43.71,104.40) --
+	( 47.63,104.40) --
+	( 47.63,108.33) --
+	( 43.71,108.33) --
 	cycle;
 
-\path[fill=fillColor] ( 49.27,110.26) --
-	( 53.20,110.26) --
-	( 53.20,114.18) --
-	( 49.27,114.18) --
+\path[fill=fillColor] ( 49.27,104.40) --
+	( 53.20,104.40) --
+	( 53.20,108.33) --
+	( 49.27,108.33) --
 	cycle;
 
-\path[fill=fillColor] ( 54.84,110.46) --
-	( 58.76,110.46) --
-	( 58.76,114.38) --
-	( 54.84,114.38) --
+\path[fill=fillColor] ( 54.84,104.40) --
+	( 58.76,104.40) --
+	( 58.76,108.33) --
+	( 54.84,108.33) --
 	cycle;
 
-\path[fill=fillColor] ( 60.41,117.06) --
-	( 64.33,117.06) --
-	( 64.33,120.99) --
-	( 60.41,120.99) --
+\path[fill=fillColor] ( 60.41,104.40) --
+	( 64.33,104.40) --
+	( 64.33,108.33) --
+	( 60.41,108.33) --
 	cycle;
 
-\path[fill=fillColor] ( 65.97,161.00) --
-	( 69.90,161.00) --
-	( 69.90,164.92) --
-	( 65.97,164.92) --
+\path[fill=fillColor] ( 65.97,104.40) --
+	( 69.90,104.40) --
+	( 69.90,108.33) --
+	( 65.97,108.33) --
 	cycle;
+
+\path[fill=fillColor] ( 71.54,104.41) --
+	( 75.46,104.41) --
+	( 75.46,108.34) --
+	( 71.54,108.34) --
+	cycle;
+
+\path[fill=fillColor] ( 77.11,104.45) --
+	( 81.03,104.45) --
+	( 81.03,108.38) --
+	( 77.11,108.38) --
+	cycle;
+
+\path[fill=fillColor] ( 82.67,104.62) --
+	( 86.60,104.62) --
+	( 86.60,108.54) --
+	( 82.67,108.54) --
+	cycle;
+
+\path[fill=fillColor] ( 88.24,105.27) --
+	( 92.16,105.27) --
+	( 92.16,109.19) --
+	( 88.24,109.19) --
+	cycle;
+
+\path[fill=fillColor] ( 93.81,108.02) --
+	( 97.73,108.02) --
+	( 97.73,111.95) --
+	( 93.81,111.95) --
+	cycle;
+
+\path[fill=fillColor] ( 99.37,115.94) --
+	(103.30,115.94) --
+	(103.30,119.87) --
+	( 99.37,119.87) --
+	cycle;
+\definecolor{fillColor}{RGB}{27,158,119}
+
+\path[fill=fillColor] ( 40.10,123.48) circle (  1.96);
+
+\path[fill=fillColor] ( 45.67,112.22) circle (  1.96);
+
+\path[fill=fillColor] ( 51.24,112.22) circle (  1.96);
+
+\path[fill=fillColor] ( 56.80,112.42) circle (  1.96);
+
+\path[fill=fillColor] ( 62.37,119.02) circle (  1.96);
+
+\path[fill=fillColor] ( 67.94,162.96) circle (  1.96);
 \definecolor{drawColor}{gray}{0.70}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 34.54, 57.56) -- ( 34.54, 63.25);
@@ -304,7 +328,25 @@
 	(336.85,198.75);
 \definecolor{drawColor}{RGB}{27,158,119}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (197.68, 87.62) --
+\path[draw=drawColor,line width= 0.6pt,line join=round] (197.68,113.24) --
+	(203.25,111.85) --
+	(208.82,111.59) --
+	(214.38,111.66) --
+	(219.95,112.12) --
+	(225.52,112.27) --
+	(231.08,112.50) --
+	(236.65,116.23) --
+	(242.22,130.94) --
+	(247.78,168.51);
+\definecolor{drawColor}{RGB}{217,95,2}
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] (197.68, 68.42) --
+	(203.25, 63.98) --
+	(208.82, 63.98) --
+	(214.38, 63.98);
+\definecolor{drawColor}{RGB}{117,112,179}
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] (197.68, 87.62) --
 	(203.25, 87.61) --
 	(208.82, 87.61) --
 	(214.38, 87.61) --
@@ -317,9 +359,9 @@
 	(253.35,123.32) --
 	(258.92,157.55) --
 	(264.48,192.33);
-\definecolor{drawColor}{RGB}{217,95,2}
+\definecolor{drawColor}{RGB}{231,41,138}
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] (197.68, 87.37) --
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] (197.68, 87.37) --
 	(203.25, 87.36) --
 	(208.82, 87.36) --
 	(214.38, 87.36) --
@@ -332,194 +374,179 @@
 	(253.35,123.35) --
 	(258.92,157.54) --
 	(264.48,192.33);
-\definecolor{drawColor}{RGB}{117,112,179}
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] (197.68,113.24) --
-	(203.25,111.85) --
-	(208.82,111.59) --
-	(214.38,111.66) --
-	(219.95,112.12) --
-	(225.52,112.27) --
-	(231.08,112.50) --
-	(236.65,116.23) --
-	(242.22,130.94) --
-	(247.78,168.51);
-\definecolor{drawColor}{RGB}{231,41,138}
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] (197.68, 68.42) --
-	(203.25, 63.98) --
-	(208.82, 63.98) --
-	(214.38, 63.98);
-\definecolor{fillColor}{RGB}{117,112,179}
-
-\path[fill=fillColor] (195.72,111.28) --
-	(199.65,111.28) --
-	(199.65,115.20) --
-	(195.72,115.20) --
-	cycle;
-
-\path[fill=fillColor] (201.29,109.89) --
-	(205.21,109.89) --
-	(205.21,113.82) --
-	(201.29,113.82) --
-	cycle;
-
-\path[fill=fillColor] (206.86,109.63) --
-	(210.78,109.63) --
-	(210.78,113.55) --
-	(206.86,113.55) --
-	cycle;
-
-\path[fill=fillColor] (212.42,109.70) --
-	(216.35,109.70) --
-	(216.35,113.62) --
-	(212.42,113.62) --
-	cycle;
-
-\path[fill=fillColor] (217.99,110.16) --
-	(221.91,110.16) --
-	(221.91,114.09) --
-	(217.99,114.09) --
-	cycle;
-
-\path[fill=fillColor] (223.56,110.31) --
-	(227.48,110.31) --
-	(227.48,114.23) --
-	(223.56,114.23) --
-	cycle;
-
-\path[fill=fillColor] (229.12,110.53) --
-	(233.05,110.53) --
-	(233.05,114.46) --
-	(229.12,114.46) --
-	cycle;
-
-\path[fill=fillColor] (234.69,114.27) --
-	(238.61,114.27) --
-	(238.61,118.20) --
-	(234.69,118.20) --
-	cycle;
-
-\path[fill=fillColor] (240.26,128.97) --
-	(244.18,128.97) --
-	(244.18,132.90) --
-	(240.26,132.90) --
-	cycle;
-
-\path[fill=fillColor] (245.82,166.55) --
-	(249.75,166.55) --
-	(249.75,170.47) --
-	(245.82,170.47) --
-	cycle;
-\definecolor{fillColor}{RGB}{217,95,2}
-
-\path[fill=fillColor] (197.68, 90.42) --
-	(200.33, 85.84) --
-	(195.04, 85.84) --
-	cycle;
-
-\path[fill=fillColor] (203.25, 90.41) --
-	(205.89, 85.84) --
-	(200.61, 85.84) --
-	cycle;
-
-\path[fill=fillColor] (208.82, 90.41) --
-	(211.46, 85.84) --
-	(206.18, 85.84) --
-	cycle;
-
-\path[fill=fillColor] (214.38, 90.41) --
-	(217.03, 85.84) --
-	(211.74, 85.84) --
-	cycle;
-
-\path[fill=fillColor] (219.95, 90.41) --
-	(222.59, 85.84) --
-	(217.31, 85.84) --
-	cycle;
-
-\path[fill=fillColor] (225.52, 90.41) --
-	(228.16, 85.84) --
-	(222.88, 85.84) --
-	cycle;
-
-\path[fill=fillColor] (231.08, 90.42) --
-	(233.73, 85.84) --
-	(228.44, 85.84) --
-	cycle;
-
-\path[fill=fillColor] (236.65, 90.49) --
-	(239.29, 85.92) --
-	(234.01, 85.92) --
-	cycle;
-
-\path[fill=fillColor] (242.22, 91.39) --
-	(244.86, 86.82) --
-	(239.57, 86.82) --
-	cycle;
-
-\path[fill=fillColor] (247.78,100.21) --
-	(250.43, 95.64) --
-	(245.14, 95.64) --
-	cycle;
-
-\path[fill=fillColor] (253.35,126.40) --
-	(255.99,121.82) --
-	(250.71,121.82) --
-	cycle;
-
-\path[fill=fillColor] (258.92,160.59) --
-	(261.56,156.02) --
-	(256.27,156.02) --
-	cycle;
-
-\path[fill=fillColor] (264.48,195.39) --
-	(267.13,190.81) --
-	(261.84,190.81) --
-	cycle;
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (194.91, 68.42) -- (200.46, 68.42);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (197.68, 65.64) -- (197.68, 71.19);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (200.48, 63.98) -- (206.03, 63.98);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (203.25, 61.20) -- (203.25, 66.75);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (206.04, 63.98) -- (211.59, 63.98);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (208.82, 61.20) -- (208.82, 66.75);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (211.61, 63.98) -- (217.16, 63.98);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (214.38, 61.20) -- (214.38, 66.75);
 \definecolor{fillColor}{RGB}{27,158,119}
 
-\path[fill=fillColor] (197.68, 87.62) circle (  1.96);
+\path[fill=fillColor] (197.68,113.24) circle (  1.96);
 
-\path[fill=fillColor] (203.25, 87.61) circle (  1.96);
+\path[fill=fillColor] (203.25,111.85) circle (  1.96);
 
-\path[fill=fillColor] (208.82, 87.61) circle (  1.96);
+\path[fill=fillColor] (208.82,111.59) circle (  1.96);
 
-\path[fill=fillColor] (214.38, 87.61) circle (  1.96);
+\path[fill=fillColor] (214.38,111.66) circle (  1.96);
 
-\path[fill=fillColor] (219.95, 87.61) circle (  1.96);
+\path[fill=fillColor] (219.95,112.12) circle (  1.96);
 
-\path[fill=fillColor] (225.52, 87.61) circle (  1.96);
+\path[fill=fillColor] (225.52,112.27) circle (  1.96);
 
-\path[fill=fillColor] (231.08, 87.62) circle (  1.96);
+\path[fill=fillColor] (231.08,112.50) circle (  1.96);
 
-\path[fill=fillColor] (236.65, 87.69) circle (  1.96);
+\path[fill=fillColor] (236.65,116.23) circle (  1.96);
 
-\path[fill=fillColor] (242.22, 88.58) circle (  1.96);
+\path[fill=fillColor] (242.22,130.94) circle (  1.96);
 
-\path[fill=fillColor] (247.78, 97.29) circle (  1.96);
+\path[fill=fillColor] (247.78,168.51) circle (  1.96);
 
-\path[fill=fillColor] (253.35,123.32) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (194.91, 87.37) -- (200.46, 87.37);
 
-\path[fill=fillColor] (258.92,157.55) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (197.68, 84.59) -- (197.68, 90.14);
 
-\path[fill=fillColor] (264.48,192.33) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (200.48, 87.36) -- (206.03, 87.36);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (203.25, 84.59) -- (203.25, 90.14);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (206.04, 87.36) -- (211.59, 87.36);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (208.82, 84.59) -- (208.82, 90.14);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (211.61, 87.36) -- (217.16, 87.36);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (214.38, 84.59) -- (214.38, 90.14);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (217.18, 87.36) -- (222.73, 87.36);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (219.95, 84.59) -- (219.95, 90.14);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (222.74, 87.36) -- (228.29, 87.36);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (225.52, 84.59) -- (225.52, 90.14);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (228.31, 87.37) -- (233.86, 87.37);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (231.08, 84.59) -- (231.08, 90.14);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (233.88, 87.44) -- (239.43, 87.44);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (236.65, 84.67) -- (236.65, 90.22);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (239.44, 88.34) -- (244.99, 88.34);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (242.22, 85.57) -- (242.22, 91.12);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (245.01, 97.16) -- (250.56, 97.16);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (247.78, 94.39) -- (247.78, 99.94);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (250.58,123.35) -- (256.13,123.35);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (253.35,120.57) -- (253.35,126.12);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (256.14,157.54) -- (261.69,157.54);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (258.92,154.77) -- (258.92,160.32);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (261.71,192.33) -- (267.26,192.33);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (264.48,189.56) -- (264.48,195.11);
+\definecolor{fillColor}{RGB}{217,95,2}
+
+\path[fill=fillColor] (197.68, 71.47) --
+	(200.33, 66.89) --
+	(195.04, 66.89) --
+	cycle;
+
+\path[fill=fillColor] (203.25, 67.03) --
+	(205.89, 62.45) --
+	(200.61, 62.45) --
+	cycle;
+
+\path[fill=fillColor] (208.82, 67.03) --
+	(211.46, 62.45) --
+	(206.18, 62.45) --
+	cycle;
+
+\path[fill=fillColor] (214.38, 67.03) --
+	(217.03, 62.45) --
+	(211.74, 62.45) --
+	cycle;
+\definecolor{fillColor}{RGB}{117,112,179}
+
+\path[fill=fillColor] (195.72, 85.66) --
+	(199.65, 85.66) --
+	(199.65, 89.58) --
+	(195.72, 89.58) --
+	cycle;
+
+\path[fill=fillColor] (201.29, 85.65) --
+	(205.21, 85.65) --
+	(205.21, 89.58) --
+	(201.29, 89.58) --
+	cycle;
+
+\path[fill=fillColor] (206.86, 85.65) --
+	(210.78, 85.65) --
+	(210.78, 89.58) --
+	(206.86, 89.58) --
+	cycle;
+
+\path[fill=fillColor] (212.42, 85.65) --
+	(216.35, 85.65) --
+	(216.35, 89.58) --
+	(212.42, 89.58) --
+	cycle;
+
+\path[fill=fillColor] (217.99, 85.65) --
+	(221.91, 85.65) --
+	(221.91, 89.58) --
+	(217.99, 89.58) --
+	cycle;
+
+\path[fill=fillColor] (223.56, 85.65) --
+	(227.48, 85.65) --
+	(227.48, 89.58) --
+	(223.56, 89.58) --
+	cycle;
+
+\path[fill=fillColor] (229.12, 85.66) --
+	(233.05, 85.66) --
+	(233.05, 89.58) --
+	(229.12, 89.58) --
+	cycle;
+
+\path[fill=fillColor] (234.69, 85.73) --
+	(238.61, 85.73) --
+	(238.61, 89.66) --
+	(234.69, 89.66) --
+	cycle;
+
+\path[fill=fillColor] (240.26, 86.62) --
+	(244.18, 86.62) --
+	(244.18, 90.54) --
+	(240.26, 90.54) --
+	cycle;
+
+\path[fill=fillColor] (245.82, 95.32) --
+	(249.75, 95.32) --
+	(249.75, 99.25) --
+	(245.82, 99.25) --
+	cycle;
+
+\path[fill=fillColor] (251.39,121.35) --
+	(255.31,121.35) --
+	(255.31,125.28) --
+	(251.39,125.28) --
+	cycle;
+
+\path[fill=fillColor] (256.96,155.59) --
+	(260.88,155.59) --
+	(260.88,159.51) --
+	(256.96,159.51) --
+	cycle;
+
+\path[fill=fillColor] (262.52,190.37) --
+	(266.45,190.37) --
+	(266.45,194.30) --
+	(262.52,194.30) --
+	cycle;
 \definecolor{drawColor}{gray}{0.70}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] (192.12, 57.56) -- (192.12, 63.25);
@@ -663,7 +690,24 @@
 	(494.43,198.75);
 \definecolor{drawColor}{RGB}{27,158,119}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (355.27, 89.52) --
+\path[draw=drawColor,line width= 0.6pt,line join=round] (355.27,114.65) --
+	(360.83,111.15) --
+	(366.40,111.49) --
+	(371.97,111.10) --
+	(377.53,115.68) --
+	(383.10,162.17);
+\definecolor{drawColor}{RGB}{217,95,2}
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] (355.27, 66.36) --
+	(360.83, 64.61) --
+	(366.40, 64.61) --
+	(371.97, 64.61) --
+	(377.53, 64.61) --
+	(383.10, 64.92) --
+	(388.67, 64.92);
+\definecolor{drawColor}{RGB}{117,112,179}
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] (355.27, 89.52) --
 	(360.83, 89.52) --
 	(366.40, 89.52) --
 	(371.97, 89.52) --
@@ -689,9 +733,9 @@
 	(483.30,132.70) --
 	(488.87,144.57) --
 	(494.43,157.31);
-\definecolor{drawColor}{RGB}{217,95,2}
+\definecolor{drawColor}{RGB}{231,41,138}
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] (355.27, 88.43) --
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] (355.27, 88.43) --
 	(360.83, 88.43) --
 	(366.40, 88.43) --
 	(371.97, 88.43) --
@@ -717,272 +761,316 @@
 	(483.30,132.38) --
 	(488.87,144.46) --
 	(494.43,157.43);
-\definecolor{drawColor}{RGB}{117,112,179}
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] (355.27,114.65) --
-	(360.83,111.15) --
-	(366.40,111.49) --
-	(371.97,111.10) --
-	(377.53,115.68) --
-	(383.10,162.17);
-\definecolor{drawColor}{RGB}{231,41,138}
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] (355.27, 66.36) --
-	(360.83, 64.61) --
-	(366.40, 64.61) --
-	(371.97, 64.61) --
-	(377.53, 64.61) --
-	(383.10, 64.92) --
-	(388.67, 64.92);
-\definecolor{fillColor}{RGB}{27,158,119}
-
-\path[fill=fillColor] (355.27, 89.52) circle (  1.96);
-
-\path[fill=fillColor] (360.83, 89.52) circle (  1.96);
-
-\path[fill=fillColor] (366.40, 89.52) circle (  1.96);
-
-\path[fill=fillColor] (371.97, 89.52) circle (  1.96);
-
-\path[fill=fillColor] (377.53, 89.52) circle (  1.96);
-
-\path[fill=fillColor] (383.10, 89.52) circle (  1.96);
-
-\path[fill=fillColor] (388.67, 89.52) circle (  1.96);
-
-\path[fill=fillColor] (394.23, 89.52) circle (  1.96);
-
-\path[fill=fillColor] (399.80, 89.52) circle (  1.96);
-
-\path[fill=fillColor] (405.37, 89.52) circle (  1.96);
-
-\path[fill=fillColor] (410.93, 89.52) circle (  1.96);
-
-\path[fill=fillColor] (416.50, 89.52) circle (  1.96);
-
-\path[fill=fillColor] (422.07, 89.53) circle (  1.96);
-
-\path[fill=fillColor] (427.63, 89.55) circle (  1.96);
-
-\path[fill=fillColor] (433.20, 89.61) circle (  1.96);
-
-\path[fill=fillColor] (438.77, 89.71) circle (  1.96);
-
-\path[fill=fillColor] (444.33, 89.97) circle (  1.96);
-
-\path[fill=fillColor] (449.90, 90.65) circle (  1.96);
-
-\path[fill=fillColor] (455.47, 92.11) circle (  1.96);
-
-\path[fill=fillColor] (461.03, 95.47) circle (  1.96);
-
-\path[fill=fillColor] (466.60,101.07) circle (  1.96);
-
-\path[fill=fillColor] (472.17,108.80) circle (  1.96);
-
-\path[fill=fillColor] (477.73,119.46) circle (  1.96);
-
-\path[fill=fillColor] (483.30,132.70) circle (  1.96);
-
-\path[fill=fillColor] (488.87,144.57) circle (  1.96);
-
-\path[fill=fillColor] (494.43,157.31) circle (  1.96);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (352.49, 66.36) -- (358.04, 66.36);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (355.27, 63.59) -- (355.27, 69.14);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (358.06, 64.61) -- (363.61, 64.61);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (360.83, 61.83) -- (360.83, 67.38);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (363.62, 64.61) -- (369.17, 64.61);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (366.40, 61.83) -- (366.40, 67.38);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (369.19, 64.61) -- (374.74, 64.61);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (371.97, 61.83) -- (371.97, 67.38);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (374.76, 64.61) -- (380.31, 64.61);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (377.53, 61.83) -- (377.53, 67.38);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (380.32, 64.92) -- (385.87, 64.92);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (383.10, 62.14) -- (383.10, 67.69);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (385.89, 64.92) -- (391.44, 64.92);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (388.67, 62.14) -- (388.67, 67.69);
 \definecolor{fillColor}{RGB}{117,112,179}
 
-\path[fill=fillColor] (353.30,112.68) --
-	(357.23,112.68) --
-	(357.23,116.61) --
-	(353.30,116.61) --
+\path[fill=fillColor] (353.30, 87.55) --
+	(357.23, 87.55) --
+	(357.23, 91.48) --
+	(353.30, 91.48) --
 	cycle;
 
-\path[fill=fillColor] (358.87,109.19) --
-	(362.80,109.19) --
-	(362.80,113.11) --
-	(358.87,113.11) --
+\path[fill=fillColor] (358.87, 87.55) --
+	(362.80, 87.55) --
+	(362.80, 91.48) --
+	(358.87, 91.48) --
 	cycle;
 
-\path[fill=fillColor] (364.44,109.53) --
-	(368.36,109.53) --
-	(368.36,113.45) --
-	(364.44,113.45) --
+\path[fill=fillColor] (364.44, 87.55) --
+	(368.36, 87.55) --
+	(368.36, 91.48) --
+	(364.44, 91.48) --
 	cycle;
 
-\path[fill=fillColor] (370.00,109.13) --
-	(373.93,109.13) --
-	(373.93,113.06) --
-	(370.00,113.06) --
+\path[fill=fillColor] (370.00, 87.55) --
+	(373.93, 87.55) --
+	(373.93, 91.48) --
+	(370.00, 91.48) --
 	cycle;
 
-\path[fill=fillColor] (375.57,113.72) --
-	(379.50,113.72) --
-	(379.50,117.64) --
-	(375.57,117.64) --
+\path[fill=fillColor] (375.57, 87.55) --
+	(379.50, 87.55) --
+	(379.50, 91.48) --
+	(375.57, 91.48) --
 	cycle;
 
-\path[fill=fillColor] (381.14,160.21) --
-	(385.06,160.21) --
-	(385.06,164.13) --
-	(381.14,164.13) --
+\path[fill=fillColor] (381.14, 87.56) --
+	(385.06, 87.56) --
+	(385.06, 91.48) --
+	(381.14, 91.48) --
+	cycle;
+
+\path[fill=fillColor] (386.70, 87.55) --
+	(390.63, 87.55) --
+	(390.63, 91.48) --
+	(386.70, 91.48) --
+	cycle;
+
+\path[fill=fillColor] (392.27, 87.55) --
+	(396.19, 87.55) --
+	(396.19, 91.48) --
+	(392.27, 91.48) --
+	cycle;
+
+\path[fill=fillColor] (397.84, 87.55) --
+	(401.76, 87.55) --
+	(401.76, 91.48) --
+	(397.84, 91.48) --
+	cycle;
+
+\path[fill=fillColor] (403.40, 87.56) --
+	(407.33, 87.56) --
+	(407.33, 91.48) --
+	(403.40, 91.48) --
+	cycle;
+
+\path[fill=fillColor] (408.97, 87.56) --
+	(412.89, 87.56) --
+	(412.89, 91.48) --
+	(408.97, 91.48) --
+	cycle;
+
+\path[fill=fillColor] (414.54, 87.56) --
+	(418.46, 87.56) --
+	(418.46, 91.48) --
+	(414.54, 91.48) --
+	cycle;
+
+\path[fill=fillColor] (420.10, 87.57) --
+	(424.03, 87.57) --
+	(424.03, 91.50) --
+	(420.10, 91.50) --
+	cycle;
+
+\path[fill=fillColor] (425.67, 87.58) --
+	(429.59, 87.58) --
+	(429.59, 91.51) --
+	(425.67, 91.51) --
+	cycle;
+
+\path[fill=fillColor] (431.24, 87.64) --
+	(435.16, 87.64) --
+	(435.16, 91.57) --
+	(431.24, 91.57) --
+	cycle;
+
+\path[fill=fillColor] (436.80, 87.75) --
+	(440.73, 87.75) --
+	(440.73, 91.67) --
+	(436.80, 91.67) --
+	cycle;
+
+\path[fill=fillColor] (442.37, 88.01) --
+	(446.29, 88.01) --
+	(446.29, 91.94) --
+	(442.37, 91.94) --
+	cycle;
+
+\path[fill=fillColor] (447.94, 88.69) --
+	(451.86, 88.69) --
+	(451.86, 92.61) --
+	(447.94, 92.61) --
+	cycle;
+
+\path[fill=fillColor] (453.50, 90.15) --
+	(457.43, 90.15) --
+	(457.43, 94.07) --
+	(453.50, 94.07) --
+	cycle;
+
+\path[fill=fillColor] (459.07, 93.51) --
+	(462.99, 93.51) --
+	(462.99, 97.43) --
+	(459.07, 97.43) --
+	cycle;
+
+\path[fill=fillColor] (464.64, 99.11) --
+	(468.56, 99.11) --
+	(468.56,103.03) --
+	(464.64,103.03) --
+	cycle;
+
+\path[fill=fillColor] (470.20,106.84) --
+	(474.13,106.84) --
+	(474.13,110.76) --
+	(470.20,110.76) --
+	cycle;
+
+\path[fill=fillColor] (475.77,117.50) --
+	(479.69,117.50) --
+	(479.69,121.43) --
+	(475.77,121.43) --
+	cycle;
+
+\path[fill=fillColor] (481.34,130.74) --
+	(485.26,130.74) --
+	(485.26,134.66) --
+	(481.34,134.66) --
+	cycle;
+
+\path[fill=fillColor] (486.90,142.61) --
+	(490.83,142.61) --
+	(490.83,146.54) --
+	(486.90,146.54) --
+	cycle;
+
+\path[fill=fillColor] (492.47,155.35) --
+	(496.39,155.35) --
+	(496.39,159.27) --
+	(492.47,159.27) --
 	cycle;
 \definecolor{fillColor}{RGB}{217,95,2}
 
-\path[fill=fillColor] (355.27, 91.48) --
-	(357.91, 86.90) --
-	(352.62, 86.90) --
+\path[fill=fillColor] (355.27, 69.41) --
+	(357.91, 64.83) --
+	(352.62, 64.83) --
 	cycle;
 
-\path[fill=fillColor] (360.83, 91.48) --
-	(363.48, 86.90) --
-	(358.19, 86.90) --
+\path[fill=fillColor] (360.83, 67.66) --
+	(363.48, 63.08) --
+	(358.19, 63.08) --
 	cycle;
 
-\path[fill=fillColor] (366.40, 91.48) --
-	(369.04, 86.90) --
-	(363.76, 86.90) --
+\path[fill=fillColor] (366.40, 67.66) --
+	(369.04, 63.08) --
+	(363.76, 63.08) --
 	cycle;
 
-\path[fill=fillColor] (371.97, 91.48) --
-	(374.61, 86.90) --
-	(369.32, 86.90) --
+\path[fill=fillColor] (371.97, 67.66) --
+	(374.61, 63.08) --
+	(369.32, 63.08) --
 	cycle;
 
-\path[fill=fillColor] (377.53, 91.48) --
-	(380.18, 86.90) --
-	(374.89, 86.90) --
+\path[fill=fillColor] (377.53, 67.66) --
+	(380.18, 63.08) --
+	(374.89, 63.08) --
 	cycle;
 
-\path[fill=fillColor] (383.10, 91.48) --
-	(385.74, 86.90) --
-	(380.46, 86.90) --
+\path[fill=fillColor] (383.10, 67.97) --
+	(385.74, 63.39) --
+	(380.46, 63.39) --
 	cycle;
 
-\path[fill=fillColor] (388.67, 91.48) --
-	(391.31, 86.91) --
-	(386.02, 86.91) --
+\path[fill=fillColor] (388.67, 67.97) --
+	(391.31, 63.39) --
+	(386.02, 63.39) --
 	cycle;
+\definecolor{fillColor}{RGB}{27,158,119}
 
-\path[fill=fillColor] (394.23, 91.48) --
-	(396.88, 86.90) --
-	(391.59, 86.90) --
-	cycle;
+\path[fill=fillColor] (355.27,114.65) circle (  1.96);
 
-\path[fill=fillColor] (399.80, 91.48) --
-	(402.44, 86.90) --
-	(397.16, 86.90) --
-	cycle;
+\path[fill=fillColor] (360.83,111.15) circle (  1.96);
 
-\path[fill=fillColor] (405.37, 91.48) --
-	(408.01, 86.91) --
-	(402.72, 86.91) --
-	cycle;
+\path[fill=fillColor] (366.40,111.49) circle (  1.96);
 
-\path[fill=fillColor] (410.93, 91.48) --
-	(413.58, 86.91) --
-	(408.29, 86.91) --
-	cycle;
+\path[fill=fillColor] (371.97,111.10) circle (  1.96);
 
-\path[fill=fillColor] (416.50, 91.48) --
-	(419.14, 86.91) --
-	(413.86, 86.91) --
-	cycle;
+\path[fill=fillColor] (377.53,115.68) circle (  1.96);
 
-\path[fill=fillColor] (422.07, 91.50) --
-	(424.71, 86.92) --
-	(419.42, 86.92) --
-	cycle;
+\path[fill=fillColor] (383.10,162.17) circle (  1.96);
 
-\path[fill=fillColor] (427.63, 91.51) --
-	(430.27, 86.93) --
-	(424.99, 86.93) --
-	cycle;
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (352.49, 88.43) -- (358.04, 88.43);
 
-\path[fill=fillColor] (433.20, 91.57) --
-	(435.84, 86.99) --
-	(430.56, 86.99) --
-	cycle;
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (355.27, 85.65) -- (355.27, 91.20);
 
-\path[fill=fillColor] (438.77, 91.69) --
-	(441.41, 87.11) --
-	(436.12, 87.11) --
-	cycle;
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (358.06, 88.43) -- (363.61, 88.43);
 
-\path[fill=fillColor] (444.33, 91.97) --
-	(446.97, 87.39) --
-	(441.69, 87.39) --
-	cycle;
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (360.83, 85.65) -- (360.83, 91.20);
 
-\path[fill=fillColor] (449.90, 92.68) --
-	(452.54, 88.10) --
-	(447.26, 88.10) --
-	cycle;
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (363.62, 88.43) -- (369.17, 88.43);
 
-\path[fill=fillColor] (455.47, 94.21) --
-	(458.11, 89.64) --
-	(452.82, 89.64) --
-	cycle;
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (366.40, 85.65) -- (366.40, 91.20);
 
-\path[fill=fillColor] (461.03, 97.53) --
-	(463.67, 92.95) --
-	(458.39, 92.95) --
-	cycle;
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (369.19, 88.43) -- (374.74, 88.43);
 
-\path[fill=fillColor] (466.60,103.50) --
-	(469.24, 98.92) --
-	(463.96, 98.92) --
-	cycle;
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (371.97, 85.65) -- (371.97, 91.20);
 
-\path[fill=fillColor] (472.17,111.34) --
-	(474.81,106.76) --
-	(469.52,106.76) --
-	cycle;
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (374.76, 88.43) -- (380.31, 88.43);
 
-\path[fill=fillColor] (477.73,122.19) --
-	(480.37,117.61) --
-	(475.09,117.61) --
-	cycle;
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (377.53, 85.65) -- (377.53, 91.20);
 
-\path[fill=fillColor] (483.30,135.43) --
-	(485.94,130.86) --
-	(480.66,130.86) --
-	cycle;
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (380.32, 88.43) -- (385.87, 88.43);
 
-\path[fill=fillColor] (488.87,147.51) --
-	(491.51,142.93) --
-	(486.22,142.93) --
-	cycle;
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (383.10, 85.65) -- (383.10, 91.20);
 
-\path[fill=fillColor] (494.43,160.48) --
-	(497.07,155.91) --
-	(491.79,155.91) --
-	cycle;
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (385.89, 88.43) -- (391.44, 88.43);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (388.67, 85.66) -- (388.67, 91.21);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (391.46, 88.43) -- (397.01, 88.43);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (394.23, 85.65) -- (394.23, 91.20);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (397.02, 88.43) -- (402.57, 88.43);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (399.80, 85.65) -- (399.80, 91.20);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (402.59, 88.43) -- (408.14, 88.43);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (405.37, 85.66) -- (405.37, 91.21);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (408.16, 88.43) -- (413.71, 88.43);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (410.93, 85.66) -- (410.93, 91.21);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (413.72, 88.43) -- (419.27, 88.43);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (416.50, 85.66) -- (416.50, 91.21);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (419.29, 88.44) -- (424.84, 88.44);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (422.07, 85.67) -- (422.07, 91.22);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (424.86, 88.46) -- (430.41, 88.46);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (427.63, 85.68) -- (427.63, 91.23);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (430.42, 88.51) -- (435.97, 88.51);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (433.20, 85.74) -- (433.20, 91.29);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (435.99, 88.64) -- (441.54, 88.64);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (438.77, 85.86) -- (438.77, 91.41);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (441.56, 88.92) -- (447.11, 88.92);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (444.33, 86.14) -- (444.33, 91.69);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (447.12, 89.63) -- (452.67, 89.63);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (449.90, 86.85) -- (449.90, 92.40);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (452.69, 91.16) -- (458.24, 91.16);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (455.47, 88.39) -- (455.47, 93.94);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (458.26, 94.48) -- (463.81, 94.48);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (461.03, 91.70) -- (461.03, 97.25);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (463.82,100.45) -- (469.37,100.45);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (466.60, 97.67) -- (466.60,103.22);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (469.39,108.29) -- (474.94,108.29);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (472.17,105.51) -- (472.17,111.06);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (474.96,119.14) -- (480.51,119.14);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (477.73,116.36) -- (477.73,121.91);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (480.52,132.38) -- (486.07,132.38);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (483.30,129.61) -- (483.30,135.16);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (486.09,144.46) -- (491.64,144.46);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (488.87,141.68) -- (488.87,147.23);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (491.66,157.43) -- (497.21,157.43);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (494.43,154.66) -- (494.43,160.21);
 \definecolor{drawColor}{gray}{0.70}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] (349.70, 57.56) -- (349.70, 63.25);
@@ -1222,112 +1310,112 @@
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] (124.58,  4.50) rectangle (409.95, 27.95);
+\path[fill=fillColor] (124.07,  4.50) rectangle (410.47, 27.95);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{fillColor}{gray}{0.92}
 
-\path[fill=fillColor] (133.58,  9.00) rectangle (148.04, 23.45);
+\path[fill=fillColor] (133.07,  9.00) rectangle (147.52, 23.45);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{drawColor}{RGB}{27,158,119}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (135.03, 16.23) -- (146.59, 16.23);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (134.51, 16.23) -- (146.08, 16.23);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{fillColor}{RGB}{27,158,119}
 
-\path[fill=fillColor] (140.81, 16.23) circle (  1.96);
+\path[fill=fillColor] (140.29, 16.23) circle (  1.96);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{fillColor}{gray}{0.92}
 
-\path[fill=fillColor] (201.65,  9.00) rectangle (216.10, 23.45);
+\path[fill=fillColor] (204.51,  9.00) rectangle (218.96, 23.45);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{drawColor}{RGB}{217,95,2}
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] (203.10, 16.23) -- (214.66, 16.23);
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] (205.95, 16.23) -- (217.52, 16.23);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{fillColor}{RGB}{217,95,2}
 
-\path[fill=fillColor] (208.88, 19.28) --
-	(211.52, 14.70) --
-	(206.24, 14.70) --
+\path[fill=fillColor] (211.73, 19.28) --
+	(214.38, 14.70) --
+	(209.09, 14.70) --
 	cycle;
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{fillColor}{gray}{0.92}
 
-\path[fill=fillColor] (281.98,  9.00) rectangle (296.43, 23.45);
+\path[fill=fillColor] (261.04,  9.00) rectangle (275.49, 23.45);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{drawColor}{RGB}{117,112,179}
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] (283.42, 16.23) -- (294.99, 16.23);
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] (262.49, 16.23) -- (274.05, 16.23);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{fillColor}{RGB}{117,112,179}
 
-\path[fill=fillColor] (287.24, 14.26) --
-	(291.17, 14.26) --
-	(291.17, 18.19) --
-	(287.24, 18.19) --
+\path[fill=fillColor] (266.30, 14.26) --
+	(270.23, 14.26) --
+	(270.23, 18.19) --
+	(266.30, 18.19) --
 	cycle;
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{fillColor}{gray}{0.92}
 
-\path[fill=fillColor] (353.42,  9.00) rectangle (367.87, 23.45);
+\path[fill=fillColor] (329.62,  9.00) rectangle (344.08, 23.45);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{drawColor}{RGB}{231,41,138}
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] (354.86, 16.23) -- (366.43, 16.23);
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] (331.07, 16.23) -- (342.63, 16.23);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{drawColor}{RGB}{231,41,138}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (357.87, 16.23) -- (363.42, 16.23);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (334.08, 16.23) -- (339.62, 16.23);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (360.65, 13.45) -- (360.65, 19.00);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (336.85, 13.45) -- (336.85, 19.00);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (152.54, 13.75) {\textsc{Crane2-BFS}};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (152.02, 13.75) {\textsc{FastWFOMC}};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (220.60, 13.75) {\textsc{Crane2-Greedy}};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (223.46, 13.75) {\textsc{ForcLift}};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (300.93, 13.75) {\textsc{FastWFOMC}};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (279.99, 13.75) {\textsc{Gantry-BFS}};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,216.81);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (372.37, 13.75) {\textsc{ForcLift}};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (348.58, 13.75) {\textsc{Gantry-Greedy}};
 \end{scope}
 \end{tikzpicture}
 
